[gd_scene load_steps=5 format=3 uid="uid://1nce5hxg017w"]

[ext_resource type="Script" path="res://wall.gd" id="1_q44k6"]
[ext_resource type="Texture2D" uid="uid://bf0x4cde8hwxw" path="res://blue-square-texture-background.jpeg" id="2_rem7p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f7yd"]
size = Vector2(6, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wfmij"]
size = Vector2(18, 53)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_q44k6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 9.53674e-07)
scale = Vector2(0.00813008, 0.133769)
texture = ExtResource("2_rem7p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_1f7yd")

[node name="Timer" type="Timer" parent="."]

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_wfmij")

[node name="stop_timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="stop_timer" to="." method="_on_stop_timer_timeout"]
